--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,21 +2,13 @@
 authors = [" "]
 description = ""
 name = "pymatrix-ss"
-packages = [
-  {include = "pymatrix", from = "src"},
-]
+packages = [{include = "pymatrix_ss", from = "src"}]
 readme = "README.md"
 repository = "https://github.com/m9810223/pymatrix-ss"
 version = "0.1.8"
 
 [tool.poetry.dependencies]
 python = ">3,<4"
-
-[tool.poetry.dev-dependencies]
-
-[build-system]
-build-backend = "poetry.core.masonry.api"
-requires = ["poetry-core>=1.0.0"]
 
 [tool.poetry.scripts]
 pymatrix = "pymatrix:screensaver"
